--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="">
+    <link rel="stylesheet" href="style.css"/>
+    <title>..:Química das Sensações :..</title>
+</head>
+<body>
+    <div class="principal">
+        <header class="cabecalho">
+            <img class="imagem-cabecalho" src=""/>
+            <h1 class="titulo"> química das sensações</h1>
+        </header>
+        <section class="direita">
 
+        </section>
+    </div>
+    
+</body>
+</html>
