css tentando mil vezes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="principal">
         <header class="cabecalho">
             <img class="imagem-cabecalho" src=""/>
-            <h1 class="titulo"> química das sensações</h1>
+            <h1 class="titulo"> Química das Sensações</h1>
         </header>
         <section class="direita">
 
