salvando 16 e 25 html e css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,23 @@
             <img class="imagem-cabecalho" src=""/>
             <h1 class="titulo"> Química das Sensações</h1>
         </header>
-        <section class="direita">
+        <section class="secao1">
+            <h3 class="titulodaquimica1">A Química Explicando os seus Sentimentos< /h3>
+            <img class="fotoquímica" src="" alt="Química das Sensações"/>
+            <br><br>
+            <ul class="Sensações1">Sensações
+                <Li>Amor hormonio</Li>
+                <Li>Alegria hormonio</Li>
+                <Li>Tristeza hormonio</Li>
+             
+            </ul>
+            <br><br>
+            <h4>Reações</h4>
+            <p class=""Reação1>
+                Na química do amor, a dopamina produz a sensação de felicidade e a adrenalina causa a aceleração
+                do coração. Já o desejo sexual é responsabilidade da noradrenalina.
+            </p>
+
 
         </section>
     </div>
